pipeline-as-code/jenkinsProjects/springboot-jenkinsfile/green-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-minikube-ingress-geen
spec:
  defaultBackend:
    service:
      name: springboot-minikube-service-green
      port:
        number: 80
  rules:
    - host: test.springboot.com
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: springboot-minikube-service-green
                port:
                  number: 80
